# pcl-pr0j3ct

./: CMakeLists.txt  CMakeLists.txt~  README.md
Data/calibration/: calib_velo_to_cam.txt
src/: cylinder_extraction_v1_cylinder_segmentation.cpp  cylinder_extraction_v1_far_away_points.h  cylinder_extraction_v1_plane_from_cluster.cpp  cylinder_extraction_v1_user_input.cpp  cylinder_extraction_v1_visualization.h  cylinder_extraction_v1_voxel_grid.cpp  read_all.cpp  test.cpp
src/Main/header/: cluster_extraction.h  cylinder_extraction_v1_cluster.h  cylinder_extraction_v1_plane_from_cluster.h  cylinder_extraction_v1_user_input.h  cylinder_extraction_v1_voxel_grid.h  cylinder_segmentation.h  extracting_far_away_points.h  extracting_voxel_grid.h  plane_from_cluster.h
src/Main/src/: MAIN.cpp  cluster_extraction.cpp  cylinder_extraction_v1_cluster.cpp  cylinder_extraction_v1_cylinder_segmentation.h  cylinder_extraction_v1_far_away_points.cpp  cylinder_extraction_v1_visualization.cpp  cylinder_segmentation.cpp  extracting_far_away_points.cpp  extracting_voxel_grid.cpp  plane_from_cluster.cpp  read_matrices_pose.cpp  read_transformations.cpp  read_velo_to_cam.cpp  store_values_in_vector_of_maps.cpp  user_input.cpp  visualize.cpp
